[package]
name = "ast-nodejs"
version = "0.1.0"
authors = ["juzhihong <juzhihong@baidu.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "ast_nodejs"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10.1"

[dependencies]
neon = "0.10.1"
